clusters/ai-hub/platform/pgadmin-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pgadmin
  namespace: platform
  annotations:
    external-dns.alpha.kubernetes.io/hostname: pgadmin.nwlnexus.net
    external-dns.alpha.kubernetes.io/target: ing.ai-hub.nwlnexus.net
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pgadmin.nwlnexus.net`)
      kind: Rule
      services:
        - name: pgadmin-pgadmin4
          port: 80
  tls:
    secretName: pgadmin-tls
